--- a/budgetManager/budget.html
+++ b/budgetManager/budget.html
@@ -8,10 +8,11 @@
   <body>
     <h1>Budget Manager</h1>
     <h2>Total Spend <span id="total">0</span></h2>
-    <script src="./budget.js"></script>
     <h2>Limit: <span id="limit"></span></h2>
     <h3>Enter amount</h3>
     <input type="text" id="amount" />
-    <input type="submit" id="spendAmount" value="spend" />
+    <button id="spendAmount">spend</button>
+
+    <script src="./budget.js"></script>
   </body>
 </html>
