Add limit management and reset functionality to Budget Manager extension

--- a/budgetManager/options.html
+++ b/budgetManager/options.html
@@ -9,7 +9,7 @@
     <h1>budget manager options</h1>
     <h2>limit: <input type="text" id="limit" /></h2>
     <button id="saveLimit">save</button>
-    <button id="resetTotal">reset limit</button>
+    <button id="resetSpend">reset spend</button>
     <script src="options.js"></script>
   </body>
 </html>
